express way yipiyay yey fothermuckers

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "mytrainingInNode",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "test"
   },
   "keywords": [
@@ -12,5 +13,11 @@
     "fercho"
   ],
   "author": "Fernando Nossa",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2"
+  }
 }
